--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@
 
 :root {
   --primary-color: #f9b64d;
+  --primary-dark: #333;
 }
 
 body {
@@ -18,11 +19,22 @@ body {
   line-height: 1.5;
   color: #333;
   background: #f4f4f4;
+  /* height: 100vh; */
+  /* background-color: red; */
+}
+
+header {
+  /* position: fixed; */
+  left: 0;
+  top: 0;
+  right: 0;
+  height: 15%;
 }
 
 /* Navbar */
 .navbar {
-  background: #333;
+  height: 100%;
+  background: var(--primary-dark);
   color: #fff;
   padding: 1rem;
   display: flex;
@@ -49,10 +61,22 @@ body {
   color: var(--primary-color);
 }
 
+.logo :hover {
+  color: var(--primary-color);
+  cursor: pointer;
+}
+
+main {
+  height: 70%;
+  top: 0;
+  /* background-color: blue; */
+}
+
 /* Showcase */
 .showcase {
-  height: 450px;
+  /* height: 450px; */
   width: 100%;
+  height: 100%;
   background: var(--primary-color);
 }
 
@@ -88,7 +112,7 @@ form button {
   padding: 1rem 2rem;
   border: none;
   border-radius: 5px;
-  background: #333;
+  background: var(--primary-dark);
   color: #fff;
   cursor: pointer;
   margin-top: 20px;
@@ -114,4 +138,20 @@ img {
   font-size: 1.6rem;
   text-align: center;
   margin-top: 1rem;
+}
+
+footer {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 15%;
+  background-color: var(--primary-dark);
+  color: #fff;
+  text-align: center;
+}
+footer section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
