--- a/app/public/views/pages/saved-images.ejs
+++ b/app/public/views/pages/saved-images.ejs
@@ -2,10 +2,13 @@
 <body>
     <%- include('../partials/header.ejs') %>
     <ul>
-        <li>
-            <h3>Dog</h3>
-            <img src="https://oaidalleapiprodscus.blob.core.windows.net/private/org-gf3lyDMMzJQyvaP3qzJ1PKRg/user-MSriXX889i4yynFhuKOGT6A1/img-cmLh9YasT3nMKC4X4UkYJ8aj.png?st=2022-12-31T10%3A01%3A59Z&se=2022-12-31T12%3A01%3A59Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2022-12-31T07%3A46%3A25Z&ske=2023-01-01T07%3A46%3A25Z&sks=b&skv=2021-08-06&sig=tAbJZu49ItiUL/ld6hzoqnmdNwwJdTOFRy7DXLnpTMw%3D" alt="a dog">
-        </li>
+        <% images.forEach((image) => { %>
+            <li>
+                <h3> <%= image.name %> </h3>
+                <img src="<%= image.url %>" alt="a dog">
+            </li>
+            <hr>
+            <% }) %>
     </ul>
 </body>
 </html>
